--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+@import '../node_modules/bootstrap/dist/css/bootstrap.css';
+@import '../node_modules/@fortawesome/fontawesome-free/css/all.css';
+@import "~ag-grid-community/dist/styles/ag-grid.css";
+@import "~ag-grid-community/dist/styles/ag-theme-balham.css";
