--- a/src/app/meteor-input/meteor-input.component.html
+++ b/src/app/meteor-input/meteor-input.component.html
@@ -1,3 +1,29 @@
-<p>
-  meteor-input works!
-</p>
+<div class="container-fluid h-100 d-flex flex-column" >
+    <div class="row">
+      <div class="col btn-group">
+          <button class="btn btn-outline-primary mx-2 fa fa-trash" (click)="onClean()"></button>
+          <button class="btn btn-outline-primary mr-2 fa fa-plus"  (click)="onInsert()"></button>
+          <button class="btn btn-outline-primary mr-2 fa fa-cut"   (click)="onDelete()"></button>
+          <!-- <button class="btn btn-outline-primary mr-2 fa fa-pen"   (click)="onEdit()"></button> -->
+          <button class="btn btn-outline-primary mr-2 fa fa-calculator" (click)="onCalc()"></button>
+          <button class="btn btn-outline-primary mr-2 fa fa-save"  (click)="onInsert()"></button>
+          </div>
+        </div>
+    <div class="row flex-grow-1">
+      <div class="col">
+          <ag-grid-angular 
+          style="width: 100%; height: 100%;" 
+          class="ag-theme-balham"
+          [rowData]="rowData" 
+          [columnDefs]="columnDefs"
+          [enterMovesDownAfterEdit]="true"
+          [rowSelection]="rowSelection"
+          (gridReady)="onGridReady($event)"
+          >
+        </ag-grid-angular>
+      </div>
+    
+  </div>    
+</div>
+<div class="row">
+</div>
