--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,29 @@
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">
-      Garmoshka
-    </a>
-  
-    <button class="navbar-toggler" type="button" 
-    (click)="toggleNavbar()">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse " [ngClass]="{'show': navbarOpen}">
-      <ul class="navbar-nav mr-auto" (click)="toggleNavbar()">
-          <li class="nav-item"><a class="nav-link" href="#">Instraction</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">List of Meteors</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Settings</a></li>
-          <li class="nav-item"><a class="nav-link" routerLink="meteor-input">Input</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Count Disgribution</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Magnitude Disgribution</a></li>
-      </ul>
-    </div>
-  </nav>
-
-
-  <div class="row">
-    <router-outlet></router-outlet>
-  </div>
+<div class="container-fluid h-100 d-flex flex-column">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">
+          Garmoshka
+        </a>
+      
+        <button class="navbar-toggler" type="button" 
+        (click)="toggleNavbar()">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse " [ngClass]="{'show': navbarOpen}">
+          <ul class="navbar-nav mr-auto" (click)="toggleNavbar()">
+              <li class="nav-item"><a class="nav-link" href="#">Instraction</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">List of Meteors</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Settings</a></li>
+              <li class="nav-item"><a class="nav-link" routerLink="meteor-input">Input</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Count Disgribution</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Magnitude Disgribution</a></li>
+          </ul>
+        </div>
+      </nav>
+    
+    
+      <div class="row h-100">
+        <router-outlet></router-outlet>
+      </div>
+    
+</div>
