--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,7 @@
 @import '../node_modules/@fortawesome/fontawesome-free/css/all.css';
 @import "~ag-grid-community/dist/styles/ag-grid.css";
 @import "~ag-grid-community/dist/styles/ag-theme-balham.css";
+
+html, body {
+    height: 100%;
+}
