--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid h-100 d-flex flex-column">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="row navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">
           Garmoshka
         </a>
@@ -13,7 +13,7 @@
           <ul class="navbar-nav mr-auto" (click)="toggleNavbar()">
               <li class="nav-item"><a class="nav-link" href="#">Instraction</a></li>
               <li class="nav-item"><a class="nav-link" href="#">List of Meteors</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Settings</a></li>
+              <li class="nav-item"><a class="nav-link" routerLink="setting">Settings</a></li>
               <li class="nav-item"><a class="nav-link" routerLink="meteor-input">Input</a></li>
               <li class="nav-item"><a class="nav-link" href="#">Count Disgribution</a></li>
               <li class="nav-item"><a class="nav-link" href="#">Magnitude Disgribution</a></li>
