--- a/src/app/meteor-input/meteor-input.component.html
+++ b/src/app/meteor-input/meteor-input.component.html
@@ -4,8 +4,8 @@
           <button class="btn btn-outline-primary mx-2 fa fa-trash" (click)="onClean()"></button>
           <button class="btn btn-outline-primary mr-2 fa fa-plus"  (click)="onInsert()"></button>
           <button class="btn btn-outline-primary mr-2 fa fa-cut"   (click)="onDelete()"></button>
+          <button class="btn btn-outline-primary mr-2 fa fa-paste"   (click)="onPaste()"></button>
           <button class="btn btn-outline-primary mr-2 fa fa-calculator" (click)="onCalc()"></button>
-          <button class="btn btn-outline-primary mr-2 fa fa-save"  (click)="onInsert()"></button>
           </div>
         </div>
     <div class="row flex-grow-1"> 
@@ -17,6 +17,8 @@
           [columnDefs]="columnDefs"
           [enterMovesDownAfterEdit]="true"
           (gridReady)="onGridReady($event)"
+          (cellValueChanged)="onCellValueChanged($event)"
+
           >
         </ag-grid-angular>
       </div>
