--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid h-100 d-flex flex-column">
-    <nav class="row navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">
+    <nav class="row navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" >
           Garmoshka
         </a>
       
@@ -11,12 +11,10 @@
       
         <div class="collapse navbar-collapse " [ngClass]="{'show': navbarOpen}">
           <ul class="navbar-nav mr-auto" (click)="toggleNavbar()">
-              <li class="nav-item"><a class="nav-link" href="#">Instraction</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">List of Meteors</a></li>
               <li class="nav-item"><a class="nav-link" routerLink="setting">Settings</a></li>
               <li class="nav-item"><a class="nav-link" routerLink="meteor-input">Input</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Count Disgribution</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Magnitude Disgribution</a></li>
+              <li class="nav-item"><a class="nav-link" routerLink="count-distribution">Count Distribution</a></li>
+              <li class="nav-item"><a class="nav-link" routerLink="magnitude-distribution">Magnitude Disgribution</a></li>
           </ul>
         </div>
       </nav>
