--- a/src/app/sheet/sheet.component.html
+++ b/src/app/sheet/sheet.component.html
@@ -1,3 +1,4 @@
+<button class="btn btn-primary m-2" (click)="onExport()">Export as CSV</button>
 <ag-grid-angular 
   style="width: 1200px; height: 500px;" 
   class="ag-theme-balham"
