--- a/src/app/meteor-input/meteor-input.component.html
+++ b/src/app/meteor-input/meteor-input.component.html
@@ -1,10 +1,11 @@
 <div class="container-fluid h-100 d-flex flex-column" >
     <div class="row">
       <div class="col btn-group">
-          <button class="btn btn-outline-primary mx-2 fa fa-trash" (click)="onClean()"></button>
-          <button class="btn btn-outline-primary mr-2 fa fa-plus"  (click)="onInsert()"></button>
-          <button class="btn btn-outline-primary mr-2 fa fa-cut"   (click)="onDelete()"></button>
-          <button class="btn btn-outline-primary mr-2 fa fa-paste"   (click)="onPaste()"></button>
+          <button class="btn btn-outline-primary mx-2 fa fa-trash" (click)="onClean()"    title="delete all"></button>
+          <button class="btn btn-outline-primary mr-2 fa fa-plus"  (click)="onInsert()"   title="insert row"></button>
+          <button class="btn btn-outline-primary mr-2 fa fa-cut"   (click)="onDelete()"   title="delete row"></button>
+          <button class="btn btn-outline-primary mr-2 fa fa-copy"  (click)="onCopyAll()"  title="copy all"></button>
+          <button class="btn btn-outline-primary mr-2 fa fa-paste" (click)="onPasteAll()" title="paste all"></button>
           </div>
         </div>
     <div class="row flex-grow-1"> 
