--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
+
 <div class="container-fluid h-100 d-flex flex-column">
-    <nav class="row navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="row navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" >
           Garmoshka
         </a>
@@ -17,11 +18,13 @@
               <li class="nav-item"><a class="nav-link" routerLink="magnitude-distribution">Magnitude Disgribution</a></li>
           </ul>
         </div>
-      </nav>
+  </nav>
     
     
-      <div class="row h-100">
-        <router-outlet></router-outlet>
-      </div>
+  <div class="row">
+    <div class="col">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
     
 </div>
