--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
   </nav>
     
     
-  <div class="row">
+  <div class="row h-100">
     <div class="col">
       <router-outlet></router-outlet>
     </div>
