--- a/src/app/meteor-input/meteor-input.component.html
+++ b/src/app/meteor-input/meteor-input.component.html
@@ -53,5 +53,20 @@
   <div class="col-3">
     <div>{{meteorService.shower}}: {{meteorService.showerCount}}</div>
     <div>SPO: {{meteorService.spoCount}}</div>
+    <p></p>
+    <div>-6:&nbsp; {{meteorService.stat[meteorService.shower][-6]}}</div>
+    <div>-5:&nbsp; {{meteorService.stat[meteorService.shower][-5]}}</div>
+    <div>-4:&nbsp; {{meteorService.stat[meteorService.shower][-4]}}</div>
+    <div>-3:&nbsp; {{meteorService.stat[meteorService.shower][-3]}}</div>
+    <div>-2:&nbsp; {{meteorService.stat[meteorService.shower][-2]}}</div>
+    <div>-1:&nbsp; {{meteorService.stat[meteorService.shower][-1]}}</div>
+    <div>&nbsp; 0:&nbsp; {{meteorService.stat[meteorService.shower]['0']}}</div>
+    <div>&nbsp; 1:&nbsp; {{meteorService.stat[meteorService.shower][1]}}</div>
+    <div>&nbsp; 2:&nbsp; {{meteorService.stat[meteorService.shower][2]}}</div>
+    <div>&nbsp; 3:&nbsp; {{meteorService.stat[meteorService.shower][3]}}</div>
+    <div>&nbsp; 4:&nbsp; {{meteorService.stat[meteorService.shower][4]}}</div>
+    <div>&nbsp; 5:&nbsp; {{meteorService.stat[meteorService.shower][5]}}</div>
+    <div>&nbsp; 6:&nbsp; {{meteorService.stat[meteorService.shower][6]}}</div>
+    <div>&nbsp; 7:&nbsp; {{meteorService.stat[meteorService.shower][7]}}</div>
   </div>
 </div>
