--- a/src/app/setting-form/setting-form.component.html
+++ b/src/app/setting-form/setting-form.component.html
@@ -10,6 +10,9 @@
     <label for="shower" class="col-2 col-form-label">Major meteor shower</label> 
     <div class="col-2">
       <input [(ngModel)]="shower" id="shower" name="shower" type="text" class="form-control">
+      <span class="form-text text-muted">
+        look for code in <a href="https://www.imo.net/members/imo_showers/working_shower_list">shower list</a>
+      </span>
     </div>
   </div>
   <div class="form-group row">
