fix angular json

--- a/src/app/meteor-input/meteor-input.component.html
+++ b/src/app/meteor-input/meteor-input.component.html
@@ -43,7 +43,7 @@
         <div class="card-body">
           <div class="card-text">
             <ul> 
-              <li>Enter needed fields in Setting tab</li>
+              <li>Enter needed fields in <a href="/settings">Setting</a> tab</li>
               <li>Enter observation data in Input tab; <br>            
                   each row can contain a value in the following format: 
               </li>
