add declination to help

--- a/src/app/meteor-input/meteor-input.component.html
+++ b/src/app/meteor-input/meteor-input.component.html
@@ -58,6 +58,7 @@
                 <li>For observation break enter two slashes (//)</li>
                 <li>For field of obstruction enter a percent (e.g. 20%)</li>
                 <li>Limited magnitude (e.g Lm=6.1)</li>
+                <li>Declination (e.g Dec=35)</li>
               </ul>
               <li>Download the calculated tabs in csv format as following:<br>
                 select <a routerLink="/count-distribution">Count Distribution</a> tab, Export as CSV;<br>
