--- a/src/app/sheet/sheet.component.html
+++ b/src/app/sheet/sheet.component.html
@@ -5,5 +5,6 @@
   [rowData]="rowData" 
   [columnDefs]="columnDefs"
   (gridReady)="onGridReady($event)"
+  [modules]="modules"
 >
 </ag-grid-angular>
