--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,8 @@
 @import '../node_modules/bootstrap/dist/css/bootstrap.css';
 @import '../node_modules/@fortawesome/fontawesome-free/css/all.css';
-@import "~ag-grid-community/dist/styles/ag-grid.css";
-@import "~ag-grid-community/dist/styles/ag-theme-balham.css";
+
+@import "../node_modules/@ag-grid-community/all-modules/dist/styles/ag-grid.css";
+@import "../node_modules/@ag-grid-community/all-modules/dist/styles/ag-theme-balham.css";
 
 html, body {
     height: 100%;
