--- a/src/app/meteor-input/meteor-input.component.html
+++ b/src/app/meteor-input/meteor-input.component.html
@@ -61,6 +61,7 @@
                 <li>For field of obstruction enter a percent (e.g. 20%)</li>
                 <li>Limited magnitude (e.g Lm=6.1)</li>
                 <li>Declination (e.g Dec=35)</li>
+                <li>Right Ascension (R.A.) (e.g RA=275)</li>
               </ul>
               <li>Download the calculated tabs in csv format as following:<br>
                 select <a routerLink="/count-distribution">Count Distribution</a> tab, Export as CSV;<br>
