add grad to docs

--- a/src/app/meteor-input/meteor-input.component.html
+++ b/src/app/meteor-input/meteor-input.component.html
@@ -40,7 +40,6 @@
     <div>&nbsp; 7:&nbsp; {{meteorService.stat[meteorService.shower][7]}}</div>
   </div>
   <div class="col-m-8 h-100">
-
       <div class="card m-5">
         <div class="card-body">
           <div class="card-text">
@@ -60,8 +59,8 @@
                 <li>For observation break enter two slashes (//)</li>
                 <li>For field of obstruction enter a percent (e.g. 20%)</li>
                 <li>Limited magnitude (e.g Lm=6.1)</li>
-                <li>Declination (e.g Dec=35)</li>
-                <li>Right Ascension (R.A.) (e.g RA=275)</li>
+                <li>Declination in degrees(e.g Dec=35)</li>
+                <li>Right Ascension in degrees(R.A.) (e.g RA=275)</li>
               </ul>
               <li>Download the calculated tabs in csv format as following:<br>
                 select <a routerLink="/count-distribution">Count Distribution</a> tab, Export as CSV;<br>
