--- a/src/app/meteor-input/meteor-input.component.html
+++ b/src/app/meteor-input/meteor-input.component.html
@@ -9,7 +9,7 @@
     <button class="btn btn-outline-primary fa fa-paste" (click)="onPasteAll()" title="paste all"></button>
   </div>
   <ag-grid-angular 
-    style="height: 100%;" 
+    style="height: 81vh;" 
     class="ag-theme-balham"
     [rowData]="rowData" 
     [columnDefs]="columnDefs"
