--- a/src/app/sheet/sheet.component.html
+++ b/src/app/sheet/sheet.component.html
@@ -1,6 +1,8 @@
 <button class="btn btn-primary m-2" (click)="onExport()">Export as CSV</button>
 <ag-grid-angular 
-  style="width: 1200px; height: 500px;" 
+  #agGrid
+  id="agGrid"
+  style="width: 100%; height: 85vh;"
   class="ag-theme-balham"
   [rowData]="rowData" 
   [columnDefs]="columnDefs"
