ra convert and bug fixes

--- a/src/app/statistics/statistics.component.html
+++ b/src/app/statistics/statistics.component.html
@@ -4,6 +4,7 @@
     </li>
     <hr>
     <li *ngFor="let mag of meteorService.magnitudeStat" >
+        <span *ngIf="mag.name >= 0">&nbsp;</span>
         {{mag.name}}: {{mag.count}}
     </li>
 </ul>
