open in separate tab

--- a/src/app/instruction/instruction.component.html
+++ b/src/app/instruction/instruction.component.html
@@ -24,7 +24,7 @@
               <li>Download the calculated tabs in csv format as following:<br>
                 select <a routerLink="/count-distribution">Count Distribution</a> tab, export as CSV;<br>
                 select <a routerLink="/magnitude-distribution">Magnitude Distribution</a> tab, export as CSV;</li>
-              <li>Navigate to IMO <a href="https://www.imo.net/members/imo_observation/upload_observation">upload observation</a> 
+              <li>Navigate to IMO <a href="https://www.imo.net/members/imo_observation/upload_observation" target="_blank">upload observation</a> 
                 and follow instraction to upload the two downloaded csv files</li>  
             </ul>
           </div>
