--- a/src/app/setting-form/setting-form.component.html
+++ b/src/app/setting-form/setting-form.component.html
@@ -11,7 +11,7 @@
     <div class="col-2">
       <input [(ngModel)]="shower" id="shower" name="shower" type="text" class="form-control">
       <span class="form-text text-muted">
-        look for code in <a href="https://www.imo.net/members/imo_showers/working_shower_list">shower list</a>
+        look for code in <a href="https://www.imo.net/members/imo_showers/working_shower_list" target="_blank">shower list</a>
       </span>
     </div>
   </div>
