--- a/src/app/meteor-input/meteor-input.component.html
+++ b/src/app/meteor-input/meteor-input.component.html
@@ -2,7 +2,7 @@
   <div class="col-m-2">
   <div *ngIf="error"
     class="alert alert-danger">
-    time should be in format HHMM
+    {{error}}
   </div>
 
   <div class="btn-group mx-2">
