Fix navbar typo and update tests

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
               <li class="nav-item"><a class="nav-link" routerLink="setting">Settings</a></li>
               <li class="nav-item"><a class="nav-link" routerLink="meteor-input">Input</a></li>
               <li class="nav-item"><a class="nav-link" routerLink="count-distribution">Count Distribution</a></li>
-              <li class="nav-item"><a class="nav-link" routerLink="magnitude-distribution">Magnitude Disgribution</a></li>
+              <li class="nav-item"><a class="nav-link" routerLink="magnitude-distribution">Magnitude Distribution</a></li>
           </ul>
         </div>
   </nav>
